Fix sizing and overflowing issues

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #FFFFFF;
     height: 100vh;
@@ -13,14 +13,14 @@ body {
 
 .container {
     background-color: #A9A9A9;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 .drawing-board {
-    width: 80%;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,14 +28,14 @@ body {
 
 .grid {
     background-color: #FFFFFF;
-    width: 95%;
-    height: 95%;
+    min-width: 95%;
+    min-height: 95%;
     border: #000000 3px solid;
     border-radius: 5px;
 }
 
 .side-menu {
-    width: 20%;
+    width: 15%;
     text-align: center;
     border-left: #000000 solid 3px;
     display: flex;
@@ -102,10 +102,8 @@ body {
 button {
     font-size: 1em;
     font-weight: 500;
-    width: 100%;
-    min-width: 00px;
+    width: 80%;
     max-width: 150px;
-    min-height: 30px;
     padding: 7px 0;
     margin: 5px 10px;
     border-radius: 8px;
